# RoboTZero

./: .gitignore  README.md
AuralFocus/: README.md
AuralFocus/TPS7A3301RGWR/: QFN65P500X500X100-21N.kicad_mod  TPS7A3301RGWR.kicad_sym
AuralFocus/TPS7A4700RGWR/: QFN65P500X500X100-21N.kicad_mod  TPS7A4700RGWR.kicad_sym
AuralFocus/applications/: README.md
AuralFocus/applications/config/: README.md
AuralFocus/applications/phase1_animation/: README.md
AuralFocus/applications/phase2_robot/: README.md
AuralFocus/docs/: README.md
AuralFocus/docs/images/: README.md
AuralFocus/hardware/: README.md
AuralFocus/hardware/3d_models/: README.md
AuralFocus/hardware/aurial1/: aurial1.kicad_pro
AuralFocus/hardware/aurial1/aurialPiHat/: #auto_saved_files#  _autosave-aurialPiHat.kicad_sch  aurialPiHat.kicad_prl  aurialPiHat.kicad_pro  aurialPiHat.kicad_sch  sym-lib-table  ~aurialPiHat.kicad_sch.lck
AuralFocus/hardware/gerbers/: README.md
AuralFocus/scripts/: README.md
AuralFocus/src/: README.md
AuralFocus/src/core_processing/: README.md
AuralFocus/src/python_bindings/: README.md
AuralFocus/tests/: README.md
AuralFocus/tests/audio_samples/: README.md
Docs/: Main.qmd  README.md  _quarto.yml  archSim.qmd  config_layer.qmd  index.qmd  installation-guide.qmd  introLineFollower.qmd  optLineFollower1.qmd  system-drawio.drawio
Docs/AuralFocus/: Docs.code-workspace  auralfocus-architecture.qmd  auralfocus-intro.qmd
Docs/_output/: archSim.html  block.html  config_layer.html  control_layer.html  index.html  oper.html  optLineFollower1.html  references.html  search.json  sitemap.xml  testing_guide.html
LineFollower/Docs/: .$system-drawio.drawio.bkp  DecisonTree.drawio  _quarto.yml  block.qmd  control_layer.qmd  debug_layer.qmd  hardware_layer.qmd  index.qmd  oper.qmd  testing_guide.qmd
LineFollower/LineFollower/: README.md  flowchart_codigo.drawio
LineFollower/LineFollower/src/: Hits.cpp  Peripherals.cpp  Sensors.cpp  TB6612FNG.cpp  Timer.h  config.h  configH.py  debug.h  globals.h  main.cpp
LineFollower/RobotZero-Nano-2024/: .gitignore  README.md  logging.md  platformio.ini  state-machines-doc.md
LineFollower/RobotZero-Nano-2024/src/: CircularBuffer.h  CourseMarkers.cpp  CourseMarkers.h  DataStructures.h  FlashManager.cpp  FlashManager.h  FlashReader.cpp  FlashReader.h  LedPattern.cpp  LedPattern.h  Logger.cpp  Logger.h  MotorsDrivers.cpp  MotorsDrivers.h  Peripherals.cpp  Peripherals.h  ProfileManager.cpp  ProfileManager.h  Sensors.cpp  Sensors.h  Timer.h  config.h  config.py  debug.h  globals.h  main.cpp
LineFollower/Tests-Nano-2024/: README.md
LineFollower/Tests-Nano-2024/01-Line_Sensors/: platformio.ini
LineFollower/Tests-Nano-2024/01-Line_Sensors/src/: main.cpp
LineFollower/Tests-Nano-2024/02-Motors/src/: main.cpp
LineFollower/Tests-Nano-2024/03-Markers/src/: main.cpp
LineFollower/Tests-Nano-2024/04-Button_Led/src/: main.cpp
LineFollower/Tests-Nano-2024/05-Callibration/src/: main.cpp
LineFollower/simulator/: .gitignore  ARCHITECTURE.md  index.html  vite.config.js
LineFollower/simulator/cpp/include/: simulator.hpp
LineFollower/simulator/cpp/src/: bindings.cpp  optimizer.cpp  simulator.cpp
LineFollower/simulator/src/lib/components/: Viewer3D.svelte
LineFollower/simulator/src/lib/stores/: project.js  simulation.js
LineFollower_Simulator/: README.md  package.json
LineFollower_Simulator/.github/workflows/: deploy.yml
LineFollower_Simulator/cpp/: CMakeLists.txt
LineFollower_Simulator/cpp/include/: optimizer.hpp  pattern_recognizer.hpp  physics.hpp
LineFollower_Simulator/cpp/include/artifacts/: artifact_base.hpp
LineFollower_Simulator/cpp/src/: pattern_recognizer.cpp  physics.cpp
LineFollower_Simulator/src/: App.svelte  app.css
LineFollower_Simulator/src/lib/components/: RobotConfig.svelte  SimulationView.svelte  TrackEditor.svelte
LineFollower_Simulator/src/lib/storage/: database.js  serializer.js  url-encoder.js
LineFollower_Simulator/src/lib/stores/: ui.js
LineFollower_Simulator/src/workers/: optimization.worker.js
(+3 files in other folders)
